# extract-webarchive-images

./: LICENSE  README.md  extract_webarchive_images.py  pyproject.toml
.github/workflows/: tests.yml
tests/: test_extract.py
