[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "extract-webarchive-images"
version = "1.0.0"
description = "Extract all embedded images from macOS Safari .webarchive files"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "Donald van de Weyer"}
]
keywords = ["safari", "webarchive", "images", "macos", "extract"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

[project.scripts]
extract-webarchive-images = "extract_webarchive_images:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
